--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,5 +263,26 @@ section h2 {
 
     /* Per il desktop */
     @media screen and (min-width: 992px) {
+header {
+    width: 100%;
+    height: 80px;
+    text-align: left;
+}
+table {
+    width: 70%;
+}
+iframe {
+    width: 49%;
+    display: inline-block;
+    height: 234px;
+    margin-bottom: 0;
 
+}
+#sectionNovità {
+    display: inline-block;
+    width: 49%;
+    position: relative;
+    top: -40px;
+    border-radius: 20px;
+}
     }
