--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,8 +265,28 @@ section h2 {
     @media screen and (min-width: 992px) {
 header {
     width: 100%;
-    height: 80px;
+    height: 100px;
     text-align: left;
+    display: inline-block;
+}
+header div img {
+    position: relative;
+display: inline-block;
+left: -40px;
+top: -18px;
+} 
+header div p {
+    display: inline-block;
+    width: 400px;
+    position: relative;
+    top:-55px;
+    left: -40px;
+}
+header nav {
+    display: inline-block;
+    position: relative;
+    top: -110px;
+    margin-left: 78%;
 }
 table {
     width: 70%;
@@ -275,6 +295,7 @@ iframe {
     width: 49%;
     display: inline-block;
     height: 234px;
+    max-height: 234px;
     margin-bottom: 0;
 
 }
@@ -284,5 +305,12 @@ iframe {
     position: relative;
     top: -40px;
     border-radius: 20px;
+}
+.asideDiv {
+    display: inline-block;
+    width: 33%;
+}
+body {
+    line-height: 4rem;
 }
     }
